# kin-lsp

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  kin-dependency-wave.yml  registry-publish.yml  sast.yml
docs/: enrichment-loop-evidence.md
scripts/: publish-kinlab-crates.sh
src/: cache.rs  client.rs  discovery.rs  enrichment.rs  error.rs  file_enrichment.rs  lib.rs  lifecycle.rs  proof.rs  protocol.rs  registry.rs  types.rs
src/adapters/: clangd.rs  go.rs  java.rs  mod.rs  python.rs  rust_analyzer.rs  typescript.rs
tests/: daemon_repro.rs  max_enrichment_probe.rs  rust_analyzer_integration.rs
