# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-lsp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LSP client for graph enrichment — type-resolved relations via language servers"

[dependencies]
# kin-model will be a git dep in release; path dep for local dev.
# For now, core types are re-defined locally to avoid registry setup.
# TODO: switch to path = "../kin-db/crates/kin-model" once .cargo/config.toml
# has the kin registry configured, or once kin-model publishes to crates.io.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt"] }
tracing = "0.1"
thiserror = "2"
which = "7"
uuid = { version = "1", features = ["v4", "serde"] }
