# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-lsp"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "LSP client for graph enrichment — type-resolved relations via language servers"
repository = "https://github.com/firelock-ai/kin-lsp"

[dependencies]
kin-model = { version = "0.2.0", registry = "kin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt"] }
tracing = "0.1"
thiserror = "2"
which = "7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
